# verifiable-processes-demo

./: .gitignore  .gitmodules  README.md  skaffold.yaml
analysis/: main.ipynb
camunda-compose/: .env  Readme.md  docker-compose-camunda.yaml  docker-compose-core.yaml
docker-compose/: docker-compose.yaml
generator/: .env
instance-generator/: main.go
kubernetes-maifests/: connectors-deployment.yaml  connectors-service.yaml  elastic-persistentvolumeclaim.yaml  elasticsearch-deployment.yaml  elasticsearch-service.yaml  kibana-deployment.yaml  kibana-persistentvolumeclaim.yaml  kibana-service.yaml  operate-deployment.yaml  operate-service.yaml  tasklist-deployment.yaml  tasklist-service.yaml  zeebe-deployment.yaml  zeebe-service.yaml
media/: Real-World-Process.bpmn  composite-proving.bpmn  key-setup.bpmn  petri-net-test1.bpmn  prove-verify-service.bpmn  proving-process.bpmn
process-generator/: go.mod  go.sum  main.go  prove-verify-service.bpmn  prove-verify-service2.bpmn
risczero-backend/: Dockerfile  README.md  provingservice-deployment.yaml
risczero-backend/host/: Cargo.toml
risczero-backend/host/proto/: verifiable_processing.proto
risczero-backend/host/src/: main.rs  main_old.rs
risczero/carbon-accounting/host/: Cargo.toml  build.rs
risczero/carbon-accounting/host/proto/: carbonemission.proto
risczero/carbon-accounting/host/src/: main.rs
verifiable-computation-service/: Dockerfile  provingservice-service.yaml
verifiableprocessing-service/: compose.yaml
zeebe-adapter/: Dockerfile  README.md  client_fix.txt  go.mod  go.sum  main.go  (+4 more)
(+63 files in other folders)
