[package]
name = "host"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tonic-build = "0.11"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "0.21.0" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
tonic = "0.11"
prost = "0.12"
bincode = "1.3.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[[bin]] # Bin to run the Proving gRPC server
name = "proving-server"
path = "src/main.rs"